# mesh_geodesy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxyfile  examples.md
MeshGeodesyApp/: CMakeLists.txt
MeshGeodesyApp/include/: Arcball.hpp  MeshGUI.hpp  MxGUI.hpp
MeshGeodesyApp/source/: Arcball.cpp  Baseball.cpp  MeshGUI.cpp  MxGUI.cpp  main.cpp
MeshGeodesyLib/: CMakeLists.txt
MeshGeodesyLib/gfx/include/: geom3d.hpp  gfx.hpp  mat4.hpp  quat.hpp  vec2.hpp  vec3.hpp  vec4.hpp
MeshGeodesyLib/gfx/source/: quat.cpp
MeshGeodesyLib/include/: trimesh.hpp
MeshGeodesyLib/source/: trimesh.cpp
apps/: CMakeLists.txt  main  main.cpp
include/: trimesh.hpp
mgapp/: CMakeLists.txt
mgapp/include/: arcball.hpp  baseball.hpp  gltools.hpp  meshGUI.hpp  mxGUI.hpp
mgapp/source/: arcball.cpp  baseball.cpp  main.cpp  meshGUI.cpp  mxGUI.cpp
mgcmd/: CMakeLists.txt
mgcmd/source/: main.cpp
mgguiapp/: CMakeLists.txt
mgguiapp/include/: gltools.hpp
mgguiapp/source/: mxGUI.cpp
mglib/: CMakeLists.txt
mglib/gfx/include/: heap.hpp  mat3.hpp  raster.hpp
mglib/gfx/source/: heap.cpp  mat4.cpp  raster.cpp
mglib/include/: auxiliar.hpp  cell_types.hpp  edgestruct.hpp  general_math.hpp  geomesh.hpp  halfedge.hpp  interval.hpp  last_step.hpp  main.hpp  manifold.hpp  mesh_geodesy.hpp  mls.hpp  path_tracer.hpp  propagation.hpp  ray.hpp  trimesh.hpp  typedef.hpp
mglib/source/: general_math.cpp  geomesh.cpp  interval.cpp  mesh_geodesy.cpp  mls.cpp  path_tracer.cpp  trimesh.cpp
